--- a/database.ini
+++ b/database.ini
@@ -4,4 +4,4 @@ password=not_the_real_password
 dbname=coding-challenge-db
 host=34.84.8.142
 
-database_url = postgres://oding-challenge-db:not_the_real_password@34.84.8.142:5432/
+database_url = postgres://coding-challenge-db:not_the_real_password@34.84.8.142:5432/challenger
